--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -110,7 +110,7 @@
 
 .page-form {
 	margin: 0;
-	padding: var(--padding-sm);
+	padding: var(--padding-xs);
 	display: flex;
 	flex-wrap: wrap;
 	background-color: var(--card-bg);
